--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ html
 
   <script>
     const links = [
-      { name: 'Google', url: 'https://www.google.com' },
+      { name: 'Google', url: 'https://www.google1.com' },
       { name: 'YouTube', url: 'https://www.youtube.com' },
       { name: 'GitHub', url: 'https://www.github.com' }
     ];
